# world_magnetic_model

./: Cargo.toml  README.md  build.rs  mise.toml
benches/wmm/: main.rs
examples/: Cargo.toml  demo_newtype.rs  demo_today.rs  demo_wmm2020_wmm2025.rs
src/: error.rs  lib.rs  math.rs  wmm.rs  wmm_models.rs
templates/: wmm.rs.j2
