[package]
name = "world_magnetic_model"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust implementation of the NOAA World Magnetic Model (WMM)."
repository = "https://github.com/budzejko/world_magnetic_model"
keywords = ["geomagnetic", "magnetic", "wmm", "declination", "no_std"]
categories = ["science::geo", "aerospace", "embedded", "no-std"]
documentation = "https://docs.rs/world_magnetic_model/latest/"
exclude = [".git*", "benches/", "build.rs", "ncei.noaa.gov/", "templates/", "mise.toml"]

[dependencies]
uom = {version="0.37.0", default-features = false, features = ["si", "f32"] }
time = {version="0.3.41", default-features = false}
thiserror = {version="2.0.12", default-features = false}
serde = { version = "1.0.219", optional = true, features = ["derive"] }
libm = "0.2.14"

[dev-dependencies]
time = {version="0.3.41", default-features = false, features = ["local-offset", "parsing"] }
rstest = "0.25.0"
assert_float_eq = "1.1.4"
criterion = "0.6.0"

[build-dependencies]
askama = "0.14.0"

[[bench]]
name = "wmm"
harness = false

[[example]]
name = "demo_today"
path = "examples/demo_today.rs"

[[example]]
name = "demo_wmm2020_wmm2025"
path = "examples/demo_wmm2020_wmm2025.rs"

[[example]]
name = "demo_newtype"
path = "examples/demo_newtype.rs"
